gcc/testsuite/g++.dg/diagnostic/unclosed-namespace.C
namespace unclosed { /* { dg-message "20: to match this '.'" } */
int filler; /* { dg-error "12:expected '.' at end of input" } */
